--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#56c6f8</color>
+    <color name="colorAccent">#ffff8800</color>
+    <color name="ic_launcher_background">#0A59A7</color>
+    <color name="input_mistake_background_color">#4DFF5722</color>
+    <color name="input_default_background_color">#FFFFFF</color>
+    <color name="input_mistake_symbol_color">#99FF5722</color>
 </resources>
