--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -37,6 +37,7 @@
         android:layout_marginBottom="30dp"
         android:paddingHorizontal="60dp"
         android:text="@string/play"
+        android:backgroundTint="@color/colorAccent"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         app:cornerRadius="20dp"
